# crowdfooding

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 103d7e4bd34a_create_products_table.py  376b0c7ae7bb_create_restaurants_table.py  8661827bab9a_add_image_url_to_products_and_.py  b71259fd0a46_add_active_field_to_products_and_.py
src/: config.py  main.py
src/database/: base.py  base_class.py  session.py
src/products/: controllers.py  errors.py  models.py  repositories.py  schemas.py  services.py
src/restaurants/: controllers.py  errors.py  models.py  repositories.py  schemas.py  services.py
